# cognit-optimizer

./: .env.example  .gitignore  README.md  config.py  db_adapter.py  main.py  opennebula_adapter.py  optimizer_adapter.py  requirements.txt  test_db_connectivity.py  test_opennebula_connectivity.py  test_optimizer.py
vendor-pyoneai/: MANIFEST.in  pyproject.toml  test_sql_engine.py
vendor-pyoneai/pyoneai/core/: sqlite_accessor.py
vendor-pyoneai/pyoneai/core/tsnumpy/: timeseries.py
vendor-pyoneai/pyoneai/core/tsnumpy/io/: sql.py
vendor-pyoneai/pyoneai/ml/: __init__.py  base_prediction_model.py  fourier_prediction_model.py  persistence_prediction_model.py  prophet_prediction_model.py  ransac_model.py
vendor-pyoneai/pyoneai/tests/accuracy/: README.md  __init__.py  accuracy_test.py  config.py  methods.py  test_prediction_accuracy.py
vendor-pyoneai/pyoneai/tests/accuracy/db_generators/: README.md  __init__.py  generate_db.py
vendor-pyoneai/pyoneai/tests/accuracy/db_generators/ts_types/: __init__.py  base.py  constant.py  counter.py  gauge_gaps.py  linear_trend.py  peaks.py  periodic.py  rate.py  sinusoidal.py  (+2 more)
vendor-pyoneai/pyoneai/tests/accuracy/scripts/: generate_db.sh  run_longterm_forecast.sh  run_shortterm_forecast.sh
vendor-pyoneai/pyoneai/tests/accuracy/utils/: io.py  time.py
vendor-pyoneai/pyoneai/tests/performance/: config.py  conftest.py  test_prediction_script.py  utils.py
vendor-pyoneai/pyoneai/tests/unit/test_core/: test_sqlite_accessor.py
vendor-pyoneai/pyoneai/tests/unit/test_ml/: test_ransac_predictor.py  test_sklearn_prediction.py
(+23 files in other folders)
