[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoneai"
version = "0.3"
requires-python = ">=3.9"

dependencies = [
    'numpy<2',
    'scipy',
    'pyyaml',
]

authors = [
    {name = "OpenNebula Systems", email = "contact@opennebula.io"}
]
maintainers = [
    {name = "OpenNebula Systems", email = "contact@opennebula.io"}
]
description = "OneAIOps SDK"
readme = "./README.md"
license = {file = "./LICENSE"}
keywords = [
    "AIOps",
    "Cloud Computing",
    "Machine Learning",
    "Time seriers prediction",
    "Anomaly detection"
]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]

[project.urls]
Source = "https://github.com/OpenNebula/one-aiops"
"Bug Tracker" = "https://github.com/OpenNebula/one-aiops/issues"
Wiki = "https://github.com/OpenNebula/one-aiops/wiki"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-mock",
]

pandas = [
    "pandas>=1.5"
]

polars = [
    "polars"
]

ml = [
    "scikit-learn>=1.3.2",
]
plot = [
    "matplotlib"
]

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 79
overwrite_in_place = true
use_parentheses = true

[tool.black]
line_length = 79
preview = true
